build.log
mkdir -p build/obj
gcc -Wall -Wextra -Iinclude -Iexternal/xxhash -c src/accumulation.c -o build/obj/accumulation.o
gcc -Wall -Wextra -Iinclude -Iexternal/xxhash -c src/cluster.c -o build/obj/cluster.o
In file included from include/cluster.h:4,
                 from src/cluster.c:1:
include/projection.h: In function ‘neighborhood’:
include/projection.h:12:3: error: storage class specified for parameter ‘tuple’
   12 | } tuple;
      |   ^~~~~
include/projection.h:18:3: error: storage class specified for parameter ‘surjected_tuple’
   18 | } surjected_tuple;
      |   ^~~~~~~~~~~~~~~
include/projection.h:20:1: error: expected declaration specifiers before ‘surjected_tuple’
   20 | surjected_tuple * surject_tuple (tuple * p, int precision);
      | ^~~~~~~~~~~~~~~
include/cluster.h:11:3: error: storage class specified for parameter ‘result’
   11 | } result;
      |   ^~~~~~
src/cluster.c:3:88: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
    3 | void next_period(int time, tile_set_elem ** sigma, uint8_t mu, uint8_t precision, uint8_t delta){
      |                                                                                        ^
src/cluster.c:32:59: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   32 | tile_set_elem ** cluster (tile_set_elem ** sigma, uint8_t mu, uint8_t delta){
      |                                                           ^
In file included from include/cluster.h:3:
include/tile_set_elem.h:48:8: error: old-style parameter declarations in prototyped function definition
   48 | tile_set_elem * neighborhood (tile_set_elem ** sigma,tile_set_elem * center, uint8_t delta)
      |        ^~~~~~~~~~~~
src/cluster.c:73: error: expected ‘{’ at end of input
include/tile_set_elem.h:48:30: warning: unused parameter ‘sigma’ [-Wunused-parameter]
   48 | tile_set_elem * neighborhood (tile_set_elem ** sigma,tile_set_elem * center, uint8_t delta)
      |                      ~~~~~~~~^~~~~
include/tile_set_elem.h:48:43: warning: unused parameter ‘center’ [-Wunused-parameter]
   48 | tile_set_elem * neighborhood (tile_set_elem ** sigma,tile_set_elem * center, uint8_t delta)
      |                                    ~~~~~~~^~~~~~
include/tile_set_elem.h:48:59: warning: unused parameter ‘delta’ [-Wunused-parameter]
   48 | tile_set_elem * neighborhood (tile_set_elem ** sigma,tile_set_elem * center, uint8_t delta)
      |                                                   ~~~~~~~~^~~~~
src/cluster.c:73: warning: control reaches end of non-void function [-Wreturn-type]
make: *** [Makefile:27: build/obj/cluster.o] Error 1
